# plex_updater

./: LICENSE  README.md  setup.cfg
src/plex_updater/: plex_updater.py
