[metadata]
name = plex_updater
version = 0.2.0
description = A script to update Plex on a Linux machine.
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: Debian Linux

[options]
package_dir =
	= src
packages = find:
install_requires = 
	requests
	importlib; python_version == "2.6"
	python-apt

[options.entry_points]
console_scripts = 
	update_plex = plex_updater.plex_updater:update

[options.packages.find]
where = src